WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306205
Unreviewed Catalyst build fix after
306156@main
.
https://bugs.webkit.org/show_bug.cgi?id=306205
Summary
Unreviewed Catalyst build fix after 306156@main.
Chris Dumez
Reported
2026-01-25 01:34:49 PST
Catalyst build fix after
306156@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-25 01:34:58 PST
<
rdar://problem/168861257
>
Chris Dumez
Comment 2
2026-01-25 01:35:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57198
EWS
Comment 3
2026-01-25 01:38:17 PST
Committed
306165@main
(620fa45c3e75): <
https://commits.webkit.org/306165@main
> Reviewed commits have been landed. Closing PR #57198 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug