Unreviewed Catalyst build fix after 306156@main. https://bugs.webkit.org/show_bug.cgi?id=306205 rdar://168861257

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _createVisibleContentRectUpdate]):

Canonical link: https://commits.webkit.org/306165@main